Fixed the  command and renamed it to